contact us added

--- a/images/index.html
+++ b/images/index.html
@@ -50,10 +50,62 @@
                     <p class="info-description">Chittagong</p>
                 </div>
             </div>
-            
-
         </section>
+        <!--What i do sec-->
+        <section class="what-i-do">
+            <h3 class="section-title">What i do</h3>
+            <!-- .skills-container>.skill*4>img+p.skill-title+p.skill-description>lorem15 -->
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="icons/js.png" alt="">
+                    <p class="skill-title">Vanilla Java</p>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus esse velit pariatur doloremque blanditiis.</p>
+                </div>
+                <div class="skill">
+                    <img src="icons/mongo.png" alt="">
+                    <p class="skill-title">MongoDB</p>
+                    <p class="skill-description">Similique cum, eius, distinctio aliquid consequuntur excepturi, velit explicabo illo mollitia alias officia odio.</p>
+                </div>
+                <div class="skill">
+                    <img src="icons/react.png" alt="">
+                    <p class="skill-title">React</p>
+                    <p class="skill-description">Quis repellendus libero dignissimos molestias, rem necessitatibus? Ex, repudiandae corporis! Sapiente cupiditate rem illum.</p>
+                </div>
+                <div class="skill">
+                    <img src="icons/nodejs.png" alt="">
+                    <p class="skill-title">Nodejs</p>
+                    <p class="skill-description">Deserunt veniam explicabo nobis corrupti quo quod quos libero reprehenderit! Quis modi quae iusto.</p>
+                </div>
+            </div>
+        </section>
+        <!-- Skipped Resuming section -->
 
+         <!-- Contact section -->
+         <section class="contact">
+            <div>
+                <h3 class="section-title">Let's connect</h3>
+                <p class="section-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet, iure?</p>
+                <a href="">
+                    <img src="/images/icons/facebook.png" alt="">
+                </a>
+                <a href="">
+                    <img src="/images/icons/twitter.png" alt="">
+                </a>
+                <a href="">
+                    <img src="/images/icons/insta.png" alt="">
+                </a>
+            </div>
+            <div>
+                <h3 class="section-title">Let's msg me</h3>
+                <form action="">
+                    <input type="text" name="" id="" placeholder="Your name">
+                    <input type="email" name="" id="" placeholder="Your email">
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Your massage"></textarea>
+                    <input class="btn-primary" type="submit" value="Submit">
+                </form>
+            </div>
+
+         </section>
     </main>
     <footer>
 
